MDEV-34392 Inplace algorithm violates the foreign key constraint

Don't allow the child foreign key column from NULL TO NOT NULL
when

1) Foreign key constraint type is ON UPDATE SET NULL
2) Foreign key constraint type is ON DELETE SET NULL
3) Foreign key constraint type is UPDATE CASCADE and referenced
column allows NULL values

Don't allow the referenced key column from NOT NULL to NULL
when foreign key constraint type is UPDATE CASCADE
and foreign columns doesn't allow NULL values

get_foreign_key_info(): Adds the additional information that
foreign, referenced columns allows NULL, NON_NULL or DOESN'T EXIST

fk_check_column_changes(): Enforce the above rules for COPY
algorithm

innobase_check_foreign_drop_col(): Checks whether the dropped
column exists in existing foreign key relation

innobase_check_foreign_low() : Enforce the above rules for
INPLACE algorithm